# machines

./: README.md
demo/: .gitignore  demo_run_machines-1.sh  demo_run_machines.sh
demo/src/: door.ts  factory_protocol.ts  factory_robot.ts  forklift.ts  quality_control.ts  robottt.ts  sensor.ts  transporter.ts
demo_remove/: package-lock.json  package.json  start_machines.sh
demo_remove/src/: door.ts  factory_protocol.ts  factory_robot.ts  forklift.ts  print_projs.ts  protocol.ts  quality_control.ts  robot.ts  sensor.ts  transporter.ts
demo_test_and_break/: demo_run_machines.sh  package.json
demo_test_and_break/src/: door.ts  factory_protocol.ts  factory_robot.ts.txt  forklift.ts  quality_control.ts.txt  transporter.ts
demos/: split_and_run.sh
demos/bt-experiments/: package-lock.json  package.json  split_and_run.sh  start_machines.sh
demos/car-factory/: package-lock.json  package.json  start_car_factory.sh
demos/start-demo-rust-test/: Cargo.toml
demos/start-demo-rust-test/src/: main.rs
demos/warehouse-demo/: package-lock.json
demos/warehouse-demo-without-branch-tracking/: package-lock.json
demos/warehouse-factory-demo/: package-lock.json
demos/warehouse-factory-demo-interactive/: package-lock.json
demos/warehouse-factory-demo-interactive-clean/: package-lock.json
demos/warehouse-factory-demo-kick/: package-lock.json  package.json
demos/warehouse-factory-demo-wait/: demo_run_machines.sh  package-lock.json
machine-check/: .gitignore  Cargo.toml  package-lock.json  package.json  package.old.json  run_inspection.sh  tsconfig.json
machine-runner/: README.md  package-lock.json  package.json  tsconfig.json
machine-static/: Cargo.toml  README.md
machine-static/evaluation/: .gitignore  Cargo.toml  ting.txt
machine-static/evaluation/benches/: composition_benchmark_full.rs  composition_benchmark_medium.rs  composition_benchmark_short.rs
machine-static/evaluation/src/: kmt23_compositional.rs  kmt23_compositional_short.rs  lib.rs  process_performance_results.rs  process_subscription_size.rs  subscription_size.rs  subscription_size_short.rs
machine-static/machine-types/: Cargo.toml  package-lock.json  package.json
machine-static/machine-types/src/: composability_check.rs  composition.rs  errors.rs  index.ts  lib.rs  machine.rs  subscription.rs  test_utils.rs  types.rs  util.rs
machine-static/machine-types/src/errors/: composition_errors.rs  swarm_errors.rs
machine-static/machine-types/src/machine/: adaptation.rs  projection.rs
machine-static/machine-types/src/subscription/: exact.rs  overapproximation.rs
machine-static/machine-types/src/types/: projection.rs  proto_graph.rs  proto_info.rs  proto_label.rs  typescript_types.rs
warehouse-demo/: .gitignore  package-lock.json
warehouse-demo-without-branch-tracking/: package-lock.json  package.json
warehouse-factory-demo/: demo_run_machines.sh
warehouse_demo/: demo_run_machines.sh  demo_run_machines_three_machines.sh  demo_run_three_and_invalid_emitter.sh  note.txt  package.json
warehouse_demo_without_branch_tracking/: demo_run_machines_three_machines.sh  demo_run_three_and_invalid_emitter.sh  note.txt
(+2029 files in other folders)
