[package]
name = "start-demo-rust-test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
anyhow = "1.0.100"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

