[package]
name = "evaluation"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/subscription_size_short.rs"
name = "subscription_size_short"

[[bin]]
path = "src/subscription_size.rs"
name = "subscription_size"

[[bin]]
path = "src/kmt23_compositional_short.rs"
name = "kmt23_compositional_short"

[[bin]]
path = "src/kmt23_compositional.rs"
name = "kmt23_compositional"

[[bin]]
path = "src/process_subscription_size.rs"
name = "process_subscription_size"

[[bin]]
path = "src/process_performance_results.rs"
name = "process_performance_results"

[dependencies]
machine-core.workspace = true
machine-check.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
average = "0.16.0"
csv = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
serde_cbor = "0.11"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
criterion = "0.7.0"

[[bench]]
name = "composition_benchmark_full"
harness = false

[[bench]]
name = "composition_benchmark_medium"
harness = false

[[bench]]
name = "composition_benchmark_short"
harness = false
