[package]
name = "machine-types"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
petgraph = "0.6.3"
itertools = "0.10.5"
intern-arc = "0.6.0"
tsify = "0.5.5"
serde = { version = "1.0.159", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.95"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
wasm-bindgen = "0.2.84"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }